--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1156,12 +1156,19 @@ select {
 .float-left {
 	float: left;
 }
+.m-0 {
+	margin: 0px;
+}
 .m-auto {
 	margin: auto;
 }
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
+}
+.my-auto {
+	margin-top: auto;
+	margin-bottom: auto;
 }
 .mx-1 {
 	margin-left: 0.25rem;
@@ -1178,10 +1185,6 @@ select {
 .my-4 {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
-}
-.my-auto {
-	margin-top: auto;
-	margin-bottom: auto;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1252,17 +1255,23 @@ select {
 .mb-4 {
 	margin-bottom: 1rem;
 }
-.-mt-px {
-	margin-top: -1px;
-}
 .mb-1 {
 	margin-bottom: 0.25rem;
 }
-.ml-10 {
-	margin-left: 2.5rem;
-}
 .mb-5 {
 	margin-bottom: 1.25rem;
+}
+.-mt-px {
+	margin-top: -1px;
+}
+.mb-3 {
+	margin-bottom: 0.75rem;
+}
+.mb-0 {
+	margin-bottom: 0px;
+}
+.ml-10 {
+	margin-left: 2.5rem;
 }
 .block {
 	display: block;
@@ -1703,6 +1712,9 @@ select {
 .p-6 {
 	padding: 1.5rem;
 }
+.p-0 {
+	padding: 0px;
+}
 .p-4 {
 	padding: 1rem;
 }
@@ -1815,6 +1827,9 @@ select {
 }
 .text-right {
 	text-align: right;
+}
+.align-baseline {
+	vertical-align: baseline;
 }
 .align-top {
 	vertical-align: top;
