--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1163,6 +1163,10 @@ select {
 	margin-left: auto;
 	margin-right: auto;
 }
+.my-auto {
+	margin-top: auto;
+	margin-bottom: auto;
+}
 .mx-1 {
 	margin-left: 0.25rem;
 	margin-right: 0.25rem;
@@ -1178,10 +1182,6 @@ select {
 .my-4 {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
-}
-.my-auto {
-	margin-top: auto;
-	margin-bottom: auto;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1258,11 +1258,11 @@ select {
 .mb-1 {
 	margin-bottom: 0.25rem;
 }
-.ml-10 {
-	margin-left: 2.5rem;
-}
 .mb-5 {
 	margin-bottom: 1.25rem;
+}
+.ml-10 {
+	margin-left: 2.5rem;
 }
 .block {
 	display: block;
@@ -1540,6 +1540,9 @@ select {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+}
+.break-all {
+	word-break: break-all;
 }
 .rounded-md {
 	border-radius: 0.375rem;
