--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,8 @@
 body,
 html {
   width: 100%;
-  height: 100%;
+  margin:0;
+  padding:0;
 }
 body {
   font-family: "Source Serif Pro", serif;
@@ -273,4 +274,82 @@ h6 {
   .topnav input[type=text] {
     border: 1px solid #ccc;  
   }
+}
+
+/* Catégorie style */
+/* Style The Dropdown Button */
+.dropbtn {
+  
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: large;
+  font-weight: 600;
+  border-radius: 3px;
+  padding: 12px 24px;
+  border: 0;
+  color: #fff;
+  background: #000a47;
+  line-height: 1.15;
+  font-size: 16px;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  transition: all .1s ease;
+  box-shadow: 0 0 0 0 #fff, 0 0 0 3px #000a47;
+}
+
+#filtericon{
+  margin-left: 5;
+  width: 20px;
+  height: 20px;
+}
+
+#cimaUpLogo{
+  position:relative;
+  height: 100%;
+  width:100%;
+  margin-top: 80px;
+}
+
+#cimaUpLogo img{
+  position:absolute;
+  top:180;
+  left:0;
+  right:0;
+  bottom:0;
+  margin:auto;
 }
