--- a/public/css/episode.css
+++ b/public/css/episode.css
@@ -49,7 +49,7 @@ header .toggle{
     font-weight: 800;
 }
 .banner .content p{
-
+    
     font-weight: 300;
     font-size: 1.2em;
     letter-spacing: 0.02em;
@@ -79,7 +79,7 @@ header .toggle{
     left: 50%;
     transform: translate(-50%,-50%);
     z-index: 10000;
-    background: rgba(0, 0, 0, 0.95);
+    background: #fff;
     width: 100%;
     height: 100%;
     display: flex;
@@ -124,7 +124,7 @@ header .toggle{
     .banner .content h2{
         font-weight: 400;
         font-size: 2em;
-        letter-spacing: 0.05em;
+        letter-spacing: 0.05em; 
     }
     .banner .content p{
         font-size: 1em;
