--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1108,6 +1108,17 @@ select {
 .prose > :last-child {
 	margin-bottom: 0;
 }
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border-width: 0;
+}
 .fixed {
 	position: fixed;
 }
@@ -1153,17 +1164,14 @@ select {
 .col-span-2 {
 	grid-column: span 2 / span 2;
 }
+.col-auto {
+	grid-column: auto;
+}
 .float-left {
 	float: left;
 }
 .m-auto {
 	margin: auto;
-}
-.m-2 {
-	margin: 0.5rem;
-}
-.m-5 {
-	margin: 1.25rem;
 }
 .mx-auto {
 	margin-left: auto;
@@ -1188,6 +1196,10 @@ select {
 .my-4 {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
+}
+.my-1 {
+	margin-top: 0.25rem;
+	margin-bottom: 0.25rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1258,17 +1270,20 @@ select {
 .mb-4 {
 	margin-bottom: 1rem;
 }
-.-mt-px {
-	margin-top: -1px;
-}
 .mb-1 {
 	margin-bottom: 0.25rem;
 }
 .mb-5 {
 	margin-bottom: 1.25rem;
 }
+.-mt-px {
+	margin-top: -1px;
+}
 .ml-10 {
 	margin-left: 2.5rem;
+}
+.mb-3 {
+	margin-bottom: 0.75rem;
 }
 .block {
 	display: block;
