--- a/public/css/cinema.css
+++ b/public/css/cinema.css
@@ -35,7 +35,16 @@ hr{
     background-color: #532dfa;
     border-color: #532dfa;
     position: absolute;
-    left: 40%;
-    padding: 10px 80px;
+    left: 42%;
+    padding: 8px 60px;
+    font-size: 25px;
+}
+
+#SendMessageBtn{
+    background-color: #532dfa;
+    border-color: #532dfa;
+    position: absolute;
+    left: 42%;
+    padding: 8px 60px;
     font-size: 25px;
 }
